# rdrop

./: Cargo.toml  README.md
.github/workflows/: tauri.yml
chunk/: Cargo.toml
chunk/src/: lib.rs  test.rs
chunk/src/error/: error.rs
chunk/src/file/: file.rs
chunk/src/general/: general.rs
chunk/src/hash/: hash.rs
chunk/src/offer/: offer.rs
chunk/src/order/: order.rs
chunk/src/time/: time.rs  timelist.txt
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
connection/: Cargo.toml
connection/src/: address.rs  client.rs  ip.rs  lib.rs  protocol.rs  time.rs
doc/: bibliography.bib  doc.tex
doc/chapters/: Anforderungen.tex  Architektur.tex  Einleitung.tex  Reflexion.tex  Umsetzung.tex
documentation/: bibliography.bib  doc.tex
documentation/chapters/: Anforderungen.tex  Architektur.tex  Einleitung.tex  Reflexion.tex  Umsetzung.tex
gui/: Cargo.toml  next.config.js  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: client.rs  connect.rs  error.rs  events.rs  handle.rs  main.rs
gui/src/components/: Button.js  IconButton.js  InputAlert.js  InputField.js  Loader.js  MatIcon.js  Titlebar.js  TransferList.js
gui/src/layouts/: Layout.js
gui/src/pages/: _app.js  _document.js  (+2 more)
p2p/: Cargo.toml
p2p/src/: client.rs  error.rs  example.rs  lib.rs  ntp_time.rs  protocol.rs
src/: client.rs  connection.rs  encryption.rs  main.rs  packages.rs  protocol.rs
src/old/: connection.rs  opcode.rs
udp-test/: Cargo.toml
udp-test/src/: client.rs  crypt.rs  main.rs  protocol.rs  udp.rs  udp2.rs
(+23 files in other folders)
