[package]
name = "rust-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.13.0"
chrono = "0.4.24"
crc = "3.0.1"
dryoc = "0.5.0"
rand = "0.8.5"
rsa = "0.8.2"
sha2 = "0.10.6"
socket2 = "0.5.2"
tokio = {version = "1.27.0", features = ["full"] }
